Adjust docs for #207
- Adjust internal references between and to transport docs pages and
  code.
- Copy BibTeX entries from message_data/doc/main.bib; adjust references.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -1496,12 +1496,29 @@
   year = {2014}
 }
 
-@article{mccollum_transport_2016,
-  author = {McCollum, David L. and Wilson, Charlie and Pettifor, Hazel and Ramea, Kalai and Krey, Volker and Riahi, Keywan and Bertram, Christoph and Lin, Zhenhong and Edelenbosch, Oreane Y. and Fujisawa, Sei},
-  journal = {Transportation Research Part D: Transport and Environment},
-  title = {Improving the behavioral realism of global integrated assessment models: An application to consumers’ vehicle choices},
-  type = {Journal Article},
-  year = {2016}
+@article{mccollum-2017,
+	author = {McCollum, David L. and Wilson, Charlie and Pettifor, Hazel and Ramea, Kalai and Krey, Volker and Riahi, Keywan and Bertram, Christoph and Lin, Zhenhong and Edelenbosch, Oreane Y. and Fujisawa, Sei},
+	doi = {10.1016/j.trd.2016.04.003},
+	issn = {13619209},
+	journal = {Transportation Research Part D: Transport and Environment},
+	keywords = {Climate change mitigation; Consumer choice; Human behavior; Light-duty vehicles; Transport},
+	pages = {322--342},
+	publisher = {Elsevier Ltd},
+	title = {{Improving the behavioral realism of global integrated assessment models: An application to consumers' vehicle choices}},
+	volume = {55},
+	year = {2017}
+}
+
+@article{mccollum-2018,
+	author = {McCollum, David L. and Wilson, Charlie and Bevione, Michela and Carrara, Samuel and Edelenbosch, Oreane Y. and Emmerling, Johannes and Guivarch, C{\'e}line and Karkatsoulis, Panagiotis and Keppo, Ilkka and Krey, Volker and Lin, Zhenhong and Broin, Eoin {\'O} and Paroussos, Leonidas and Pettifor, Hazel and Ramea, Kalai and Riahi, Keywan and Sano, Fuminori and Rodriguez, Baltazar Solano and van Vuuren, Detlef P.},
+	doi = {10.1038/s41560-018-0195-z},
+	issn = {2058-7546},
+	journal = {Nature Energy},
+	number = {8},
+	pages = {664–673},
+	title = {Interaction of consumer preferences and climate policies in the global transition to low-carbon vehicles},
+	volume = {3},
+	year = {2018},
 }
 
 @article{mcjeon_gas_2014,
