Add note about #130 to materials docs

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -1711,3 +1711,12 @@
   volume = {42},
   year = {2017}
 }
+
+@article{unlu_2024_materials,
+  author = {Gamze Ünlü and Florian Maczek and Jihoon Min and Stefan Frank and Fridolin Glatter and Paul Natsuo Kishimoto and Jan Streeck and Nina Eisenmenger and Volker Krey and Dominik Wiedenhofer},
+  doi = {https://doi.org/10.5194/egusphere-2023-3035},
+  journal = {EGUsphere [preprint]},
+  title = {MESSAGEix-Materials v1.0.0: Representation of Material Flows and Stocks in an Integrated Assessment Model},
+  url = {https://egusphere.copernicus.org/preprints/2024/egusphere-2023-3035/},
+  year = {2024}
+}
